--- a/iOS_MadLibs/Base.lproj/Main.storyboard
+++ b/iOS_MadLibs/Base.lproj/Main.storyboard
@@ -1,14 +1,19 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="nTD-tZ-Bho">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="iOS_MadLibs" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -16,11 +21,123 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="..." textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0o2-yF-Ewb">
+                                <rect key="frame" x="16" y="323.5" width="343" height="20.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="0o2-yF-Ewb" firstAttribute="top" relation="greaterThanOrEqual" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="9pl-k7-k3h"/>
+                            <constraint firstItem="0o2-yF-Ewb" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="ItX-KY-kFI"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" relation="greaterThanOrEqual" secondItem="0o2-yF-Ewb" secondAttribute="bottom" id="O4e-NO-tN6"/>
+                            <constraint firstItem="0o2-yF-Ewb" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="Oec-q9-VZh"/>
+                            <constraint firstItem="0o2-yF-Ewb" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="wkq-uQ-BFK"/>
+                        </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="8rf-zd-Nr0">
+                        <barButtonItem key="rightBarButtonItem" systemItem="compose" id="G26-9r-sBA"/>
+                    </navigationItem>
+                    <connections>
+                        <segue destination="yhy-U7-TZP" kind="presentation" id="NUX-BO-rYo"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="1070" y="-544"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="lf3-UC-thV">
+            <objects>
+                <viewController id="yhy-U7-TZP" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="xwE-wm-oD9"/>
+                        <viewControllerLayoutGuide type="bottom" id="ghv-7k-Rmp"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="r2L-Hx-KIM">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Adjective" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="iMi-VO-2qN">
+                                <rect key="frame" x="16" y="28" width="343" height="30"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Verb" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="fBf-r2-SFq">
+                                <rect key="frame" x="16" y="66" width="343" height="30"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Verb" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="DY4-Rv-wAD">
+                                <rect key="frame" x="16" y="104" width="343" height="30"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Noun" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="1sW-0Z-nVU">
+                                <rect key="frame" x="16" y="142" width="343" height="30"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8Bz-Xk-D2J">
+                                <rect key="frame" x="158" y="180" width="60" height="30"/>
+                                <color key="backgroundColor" red="0.62060559293926754" green="0.51814222690684408" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="60" id="zSf-Ys-jJG"/>
+                                </constraints>
+                                <state key="normal" title="Submit">
+                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                </state>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="fBf-r2-SFq" firstAttribute="top" secondItem="iMi-VO-2qN" secondAttribute="bottom" constant="8" id="2h3-nq-c6O"/>
+                            <constraint firstItem="fBf-r2-SFq" firstAttribute="trailing" secondItem="r2L-Hx-KIM" secondAttribute="trailingMargin" id="6N4-3c-hul"/>
+                            <constraint firstItem="iMi-VO-2qN" firstAttribute="leading" secondItem="r2L-Hx-KIM" secondAttribute="leadingMargin" id="HJt-tQ-hE7"/>
+                            <constraint firstItem="1sW-0Z-nVU" firstAttribute="trailing" secondItem="r2L-Hx-KIM" secondAttribute="trailingMargin" id="PBM-6u-UbW"/>
+                            <constraint firstItem="iMi-VO-2qN" firstAttribute="top" secondItem="xwE-wm-oD9" secondAttribute="bottom" constant="8" id="QeL-4n-H32"/>
+                            <constraint firstItem="fBf-r2-SFq" firstAttribute="leading" secondItem="r2L-Hx-KIM" secondAttribute="leadingMargin" id="SXY-AM-tLS"/>
+                            <constraint firstItem="1sW-0Z-nVU" firstAttribute="top" secondItem="DY4-Rv-wAD" secondAttribute="bottom" constant="8" id="XQT-yc-M1K"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="iMi-VO-2qN" secondAttribute="trailing" id="Ztg-fk-Des"/>
+                            <constraint firstAttribute="trailingMargin" relation="greaterThanOrEqual" secondItem="8Bz-Xk-D2J" secondAttribute="trailing" id="aXz-hh-Pod"/>
+                            <constraint firstItem="DY4-Rv-wAD" firstAttribute="leading" secondItem="r2L-Hx-KIM" secondAttribute="leadingMargin" id="aee-ks-uzJ"/>
+                            <constraint firstItem="8Bz-Xk-D2J" firstAttribute="centerX" secondItem="r2L-Hx-KIM" secondAttribute="centerX" id="gkY-QC-2ri"/>
+                            <constraint firstItem="8Bz-Xk-D2J" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="r2L-Hx-KIM" secondAttribute="leadingMargin" id="jPW-qZ-03y"/>
+                            <constraint firstItem="8Bz-Xk-D2J" firstAttribute="top" secondItem="1sW-0Z-nVU" secondAttribute="bottom" constant="8" id="kjR-Ne-8hQ"/>
+                            <constraint firstItem="DY4-Rv-wAD" firstAttribute="trailing" secondItem="r2L-Hx-KIM" secondAttribute="trailingMargin" id="txE-on-EOA"/>
+                            <constraint firstItem="DY4-Rv-wAD" firstAttribute="top" secondItem="fBf-r2-SFq" secondAttribute="bottom" constant="8" id="wPh-is-K2V"/>
+                            <constraint firstItem="1sW-0Z-nVU" firstAttribute="leading" secondItem="r2L-Hx-KIM" secondAttribute="leadingMargin" id="yB9-xL-Bf1"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="LBv-j2-Xkg" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1897" y="-544"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="coQ-P9-HB3">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="nTD-tZ-Bho" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="BCd-XX-F4T">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="bBE-Im-k7D"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="dry-Dj-8Lb" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="136.80000000000001" y="-543.77811094452773"/>
         </scene>
     </scenes>
 </document>
